新しいサービスを作成します

--- a/Yaml/YamlFile/ConfigMap.cshtml
+++ b/Yaml/YamlFile/ConfigMap.cshtml
@@ -1,16 +1,14 @@
+@using Yaml.Infrastructure.Dto
 @model Yaml.Infrastructure.Dto.YamlClusterInfoDto
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ printf "%s-metrics" (include "postgresql.readReplica.fullname" .) }}
-  namespace: {{ .Release.Namespace | quote }}
-  labels: {{- include "common.labels.standard" . | nindent 4 }}
-    {{- if .Values.commonLabels }}
-    {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
-    {{- end }}
-  {{- if .Values.commonAnnotations }}
-  annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
-  {{- end }}
+  name: @Model.ClusterName-configmap
+  namespace: @Model.AppName
 data:
-  custom-metrics.yaml: {{ toYaml .Values.metrics.customMetrics | quote }}
-{{- end }}
+    @foreach(var item in @Model.ConfigMap ?? Enumerable.Empty<ConfigMapDto>())
+    {
+        string configRecord = item.ConfigKey + ": \"" + item.Value + "\"\n";
+        @("  " + configRecord)
+    }
+  X: 1
