--- a/Yaml/YamlFile/Service.cshtml
+++ b/Yaml/YamlFile/Service.cshtml
@@ -1,13 +1,14 @@
 @model Yaml.Infrastructure.Dto.YamlClusterInfoDto
-apiVersion:  v1
+apiVersion: v1
 kind: Service
 metadata:
   name: @Model.ClusterName-svc
+  namespace: @Model.AppName-ns
 spec:
   selector:
     app:  @Model.ClusterName-app
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 6379
+      targetPort: 6379
   type: ClusterIP
