--- a/Yaml/YamlFile/PersistentVolume.cshtml
+++ b/Yaml/YamlFile/PersistentVolume.cshtml
@@ -6,9 +6,9 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: @Model.Disk?.Type
+  storageClassName: @Model.DiskClass
   capacity:
-    storage:  @Model.Disk?.Size
+    storage:  @Model.DiskSize
   accessModes:
     - ReadWriteOnce
   hostPath:
