--- a/Yaml/YamlFile/PersistentVolumeClaim.cshtml
+++ b/Yaml/YamlFile/PersistentVolumeClaim.cshtml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: @Model.Disk?.Type
+  storageClassName: @Model.DiskClass
   resources:
     requests:
-      storage: @Model.Disk?.Size
+      storage: @Model.DiskSize
