Test Deployment function

--- a/Yaml/YamlFile/Ingress.cshtml
+++ b/Yaml/YamlFile/Ingress.cshtml
@@ -5,8 +5,12 @@ metadata:
   name: @Model.ClusterName-ingress
   namespace: @Model.AppName-ns
 spec:
+  tls:
+    - hosts:
+        - @Model.Domain?.DomainName
+      secretName: @Model.ClusterName-tls-secret
   rules:
-    - host: @Model.Domain.DomainName
+    - host: @Model.Domain?.DomainName
       http:
         paths:
           - path: @Model.Prefix
