--- a/Yaml/YamlFile/PersistentVolume.cshtml
+++ b/Yaml/YamlFile/PersistentVolume.cshtml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: @Model.AppName-volume
+  name: pv-disk1
   labels:
     type: local
 spec:
-  storageClassName: @Model.DiskClass
+  storageClassName: @Model.DiskInfoList[0].DiskType
   capacity:
-    storage:  @Model.DiskSize
+    storage:  @Model.DiskInfoList[0].DiskType
   accessModes:
     - ReadWriteOnce
