--- a/Yaml/YamlFile/PersistentVolumeClaim.cshtml
+++ b/Yaml/YamlFile/PersistentVolumeClaim.cshtml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-dick1 永久
+  name: @Model.Name-pvc
   namespace: @Model.AppName-ns
 spec:
   accessModes:
