--- a/Yaml/YamlFile/PersistentVolumeClaim.cshtml
+++ b/Yaml/YamlFile/PersistentVolumeClaim.cshtml
@@ -8,6 +8,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   storageClassName: @Model.DiskType
+  volumeName: @Model.PvName
   resources:
     requests:
       storage: @Model.DiskSize
