--- a/Yaml/YamlFile/PersistentVolume.cshtml
+++ b/Yaml/YamlFile/PersistentVolume.cshtml
@@ -1,13 +1,19 @@
-@model Yaml.Infrastructure.Dto.YamlClusterInfoDto
+@model Yaml.Infrastructure.Dto.PvRender
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-disk1
-  labels:
-    type: local
+  annotations:
+    pv.kubernetes.io/provisioned-by: disk.csi.azure.com
+  name: @Model.Name
 spec:
-  storageClassName: @Model.DiskInfoList[0].DiskType
+  storageClassName: @Model.StorageClassName
+  persistentVolumeReclaimPolicy: Retain
   capacity:
-    storage:  @Model.DiskInfoList[0].DiskType
+    storage:  @Model.Storage
   accessModes:
     - ReadWriteOnce
+  csi:
+    driver: disk.csi.azure.com
+    volumeHandle: /subscriptions/@Model.SubscriptionId/resourceGroups/@Model.ResourceGroup/providers/Microsoft.Compute/disks/myAKSDisk
+    volumeAttributes:
+      fsType: ext4
