--- a/Yaml/YamlFile/Keyvault.cshtml
+++ b/Yaml/YamlFile/Keyvault.cshtml
@@ -1,4 +1,4 @@
-@model Yaml.Infrastructure.Dto.YamlAppInfoDto
+@model Yaml.Infrastructure.Dto.KeyVaultRender
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
@@ -6,28 +6,28 @@ metadata:
   namespace: @Model.AppName-ns
 spec:
   parameters:
-    keyvaultName: @Model.KeyVault?.KeyVaultName
+    keyvaultName: @Model.KeyVaultName
     objects: |
       array:
-        @foreach (var kv in @Model.KeyVault.KeyVault)
+        @foreach (var kv in @Model.ConfigKeyList)
         {
           string obj = $"        - | \n" +
                        $"          objectType: secret \n" +
-                       $"          objectName: {kv.ConfigKey} \n";
+                       $"          objectName: {kv} \n";
           @obj
         }
-    tenantId: "@Model.KeyVault?.TenantId"
+    tenantId: "@Model.TenantId"
     usePodIdentity: "false"
     useVMManagedIdentity: "true"
-    userAssignedIdentityID: "@Model.KeyVault?.ManagedId"
+    userAssignedIdentityID: "@Model.ManagedId"
   provider: azure
   secretObjects:
     - secretName: @Model.AppName-secret
       type: Opaque
       data:
-        @foreach (var kv in Model.KeyVault.KeyVault)
+        @foreach (var kv in Model.ConfigKeyList)
         {
-          string sc = $"        - key: {kv.ConfigKey} \n" +
-                      $"          objectName: {kv.ConfigKey} \n";
+          string sc = $"        - key: {kv} \n" +
+                      $"          objectName: {kv} \n";
           @sc
         }
