backend aws support

--- a/Yaml/YamlFile/Deployment.cshtml
+++ b/Yaml/YamlFile/Deployment.cshtml
@@ -38,12 +38,13 @@ spec:
           }
           @foreach (var kv in @Model.KeyVault)
           {
-            
+
             string secretkeyref = $"            - name: {kv.ConfigKey} \n" +
-                                  $"              valueFrom: \n" +
-                                  $"                secretKeyRef: \n" +
-                                  $"                  name: {Model.AppName}-secret\n" +
-                                  $"                  key: {kv.ConfigKey}\n";
+                                  $"              value: /mnt/secrets-store/{kv.ConfigKey}\n";
+                                  // $"              valueFrom: \n" +
+                                  // $"                secretKeyRef: \n" +
+                                  // $"                  name: {Model.AppName}-secret\n" +
+                                  // $"                  key: {kv.ConfigKey}\n";
             @secretkeyref
           }
           ports: 
