--- a/Yaml/YamlFile/Service.cshtml
+++ b/Yaml/YamlFile/Service.cshtml
@@ -9,6 +9,6 @@ spec:
     app:  @Model.ClusterName-app
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: @Model.Port
+      targetPort: @Model.TargetPort
   type: ClusterIP
